--- a/app/src/main/res/layout/toolbar_detail_layout.xml
+++ b/app/src/main/res/layout/toolbar_detail_layout.xml
@@ -11,7 +11,7 @@
     <androidx.appcompat.widget.Toolbar style="@style/ToolbarStyle">
 
         <ImageView
-            android:id="@+id/favourite_image"
+            android:id="@+id/saved_movies"
             style="@style/ToolbarIconStyle"
             android:layout_gravity="start"
             android:layout_marginStart="@dimen/margin_sixteen"
