--- a/app/src/main/res/layout/saved_fragment.xml
+++ b/app/src/main/res/layout/saved_fragment.xml
@@ -23,7 +23,7 @@
         tools:context=".ui.screen.saved.SavedFragment">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/saved_movies_recyclerview"
+            android:id="@+id/saved_movies_list"
             style="@style/MovieListStyle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
