--- a/app/src/main/res/layout/toolbar_detail_layout.xml
+++ b/app/src/main/res/layout/toolbar_detail_layout.xml
@@ -10,11 +10,12 @@
 
     <androidx.appcompat.widget.Toolbar style="@style/ToolbarStyle">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/saved_movies"
             style="@style/ToolbarIconStyle"
             android:layout_gravity="start"
-            android:layout_marginStart="@dimen/margin_sixteen"
+            android:layout_marginStart="@dimen/dim_2"
+            android:background="?attr/actionBarItemBackground"
             android:contentDescription="@string/heart_icon"
             android:onClick="@{()->viewModel.onSavedClicked()}"
             android:src="@drawable/ic_favorite" />
@@ -24,11 +25,12 @@
             style="@style/ToolbarTitleTextStyle"
             android:text="@string/movie_detail" />
 
-        <ImageView
-            android:id="@+id/search_image"
+        <ImageButton
+            android:id="@+id/action_nav_search"
             style="@style/ToolbarIconStyle"
             android:layout_gravity="end"
-            android:layout_marginEnd="@dimen/margin_sixteen"
+            android:background="?attr/actionBarItemBackground"
+            android:layout_marginEnd="@dimen/dim_2"
             android:contentDescription="@string/search_icon"
             android:onClick="@{()-> viewModel.onSearchClick()}"
             android:src="@drawable/ic_search" />
