--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,13 +20,13 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">@dimen/text_size_eighteen</item>
+        <item name="android:textSize">@dimen/text_size_med</item>
     </style>
 
     <style name="DividerStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/divider_height</item>
-        <item name="android:layout_marginTop">@dimen/margin_one</item>
+        <item name="android:layout_marginTop">@dimen/small_margin</item>
         <item name="android:background">@android:color/darker_gray</item>
     </style>
 
@@ -41,7 +41,7 @@
         <item name="android:layout_height">@dimen/rating_ic_size</item>
         <item name="android:layout_below">@id/year_text</item>
         <item name="android:layout_alignParentStart">true</item>
-        <item name="android:layout_marginStart">@dimen/margin_twelve</item>
+        <item name="android:layout_marginStart">@dimen/dim_1_25</item>
         <item name="android:contentDescription">@string/star_description</item>
     </style>
 
@@ -69,8 +69,8 @@
     <style name="EditTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_marginStart">@dimen/margin_twelve</item>
-        <item name="android:layout_marginEnd">@dimen/margin_twelve</item>
+        <item name="android:layout_marginStart">@dimen/dim_1_25</item>
+        <item name="android:layout_marginEnd">@dimen/dim_1_25</item>
         <item name="android:layout_alignParentStart">true</item>
         <item name="android:textColorHint">@android:color/white</item>
         <item name="android:imeOptions">actionDone</item>
@@ -108,15 +108,15 @@
     <style name="LinLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/margin_four</item>
-        <item name="android:layout_marginEnd">@dimen/margin_four</item>
+        <item name="android:layout_marginStart">@dimen/dim_0_5</item>
+        <item name="android:layout_marginEnd">@dimen/dim_0_5</item>
         <item name="android:orientation">horizontal</item>
     </style>
 
     <style name="DetailOverviewStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/margin_four</item>
+        <item name="android:layout_margin">@dimen/dim_0_5</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">18sp</item>
     </style>
